# AlphaGL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  configure.sh
Alpha/: Alpha.cpp  Assert.h  CMakeLists.txt  Helpers.h  Registry.cpp  Registry.h  Registry.inl
Alpha/components/: Transform.cpp  Transform.h
Alpha/core/: Assert.h  Entity.h  Helpers.h  Registry.cpp  Registry.h  Registry.inl  Window.cpp  Window.h
Alpha/systems/: TransformSystem.cpp  TransformSystem.h
cmake/: ClangTidy.cmake  Compiler.cmake  Cppcheck.cmake
